--- a/css/swad23.66.1.css
+++ b/css/swad23.66.1.css
@@ -2146,20 +2146,15 @@ a:hover img.CENTER_PHOTO_SHOW
 .ICO_YELLOW_DARK	{filter:invert(61%) sepia(96%) saturate(366%) hue-rotate(352deg) brightness(103%) contrast(101%);}	/* #ffb42e */
 
 /********************************** Frame ************************************/
-.FRAME_INLINE
-	{
-	display:inline-block;
-	margin:0 8px;
-	vertical-align:top;
-	}
 .FRAME
 	{
 	display:inline-block;
 	box-sizing:border-box;
-	margin:2px 0;
+	margin:2px 8px;
 	padding:10px;
 	border-radius:2px;
 	box-shadow:0 2px 2px 0 rgba(0,0,0,0.14), 0 2px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
+	vertical-align:top;
 	text-align:center;
 	overflow:hidden;
 	}
